[gd_scene load_steps=31 format=3 uid="uid://mdes4hst2fpb"]

[ext_resource type="Script" uid="uid://ylp6vydxbh2w" path="res://entities/info/player.gd" id="1_merdl"]
[ext_resource type="PackedScene" uid="uid://d16mvtftr8jl7" path="res://components/health_component.tscn" id="2_quc4t"]
[ext_resource type="PackedScene" uid="uid://crqe2dumssey" path="res://assets/raw/arms.blend" id="3_2hcst"]
[ext_resource type="Texture2D" uid="uid://ctatlt4v5fyf8" path="res://assets/crosshair.png" id="3_otayu"]
[ext_resource type="PackedScene" uid="uid://lm36snfl5obu" path="res://components/hitbox_component.tscn" id="3_ug0ox"]
[ext_resource type="PackedScene" uid="uid://ddemxbua6ylaj" path="res://components/audio_manager_component.tscn" id="4_ug0ox"]
[ext_resource type="PackedScene" uid="uid://ccvm8eicw8t4d" path="res://components/common_physics_component.tscn" id="5_quc4t"]

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_w3576"]
animation = &"Block"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_2hcst"]
animation = &"Die"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_o6ig1"]
animation = &"FistsUp"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_vndai"]
animation = &"Parry"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_hn42q"]
animation = &"Point"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_tdjdb"]
animation = &"PunchL"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_3544y"]
animation = &"PunchR"

[sub_resource type="AnimationNodeBlendSpace1D" id="AnimationNodeBlendSpace1D_2hcst"]
blend_point_0/node = SubResource("AnimationNodeAnimation_tdjdb")
blend_point_0/pos = 0.0
blend_point_1/node = SubResource("AnimationNodeAnimation_3544y")
blend_point_1/pos = 1.0
snap = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_vndai"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_tdjdb"]
advance_mode = 2
advance_expression = "parry_active"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_3544y"]
advance_mode = 2
advance_expression = "block_active"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_ovxsc"]
advance_mode = 2
advance_expression = "false"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_dt56t"]
advance_mode = 2
advance_expression = "!block_active"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_p22qk"]
advance_mode = 2
advance_expression = "!parry_active"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_x73ai"]
xfade_time = 0.25
advance_mode = 2
advance_expression = "is_punching"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_0smle"]
xfade_time = 0.1
switch_mode = 2
advance_mode = 2

[sub_resource type="Curve" id="Curve_tdjdb"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_ion2h"]
xfade_time = 1.0
xfade_curve = SubResource("Curve_tdjdb")
advance_mode = 2
advance_expression = "dead"

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_yfdjf"]
states/Block/node = SubResource("AnimationNodeAnimation_w3576")
states/Block/position = Vector2(469, 193)
states/Die/node = SubResource("AnimationNodeAnimation_2hcst")
states/Die/position = Vector2(733, 65)
states/End/position = Vector2(940, 100)
states/FistsUp/node = SubResource("AnimationNodeAnimation_o6ig1")
states/FistsUp/position = Vector2(422, 65)
states/Parry/node = SubResource("AnimationNodeAnimation_vndai")
states/Parry/position = Vector2(452, -52)
states/Point/node = SubResource("AnimationNodeAnimation_hn42q")
states/Point/position = Vector2(678, 2)
states/Punch/node = SubResource("AnimationNodeBlendSpace1D_2hcst")
states/Punch/position = Vector2(748, 152)
states/Start/position = Vector2(209, 100)
transitions = ["Start", "FistsUp", SubResource("AnimationNodeStateMachineTransition_vndai"), "FistsUp", "Parry", SubResource("AnimationNodeStateMachineTransition_tdjdb"), "FistsUp", "Block", SubResource("AnimationNodeStateMachineTransition_3544y"), "FistsUp", "Point", SubResource("AnimationNodeStateMachineTransition_ovxsc"), "Block", "FistsUp", SubResource("AnimationNodeStateMachineTransition_dt56t"), "Parry", "FistsUp", SubResource("AnimationNodeStateMachineTransition_p22qk"), "FistsUp", "Punch", SubResource("AnimationNodeStateMachineTransition_x73ai"), "Punch", "FistsUp", SubResource("AnimationNodeStateMachineTransition_0smle"), "FistsUp", "Die", SubResource("AnimationNodeStateMachineTransition_ion2h")]
graph_offset = Vector2(53, -109)

[sub_resource type="CylinderShape3D" id="CylinderShape3D_merdl"]
height = 2.1

[sub_resource type="LabelSettings" id="LabelSettings_otayu"]
line_spacing = 0.0
font_size = 64
outline_size = 16
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_ug0ox"]
font_size = 32
outline_size = 8
outline_color = Color(0, 0, 0, 1)

[sub_resource type="CylinderShape3D" id="CylinderShape3D_tdjdb"]
height = 2.1

[node name="Player" type="CharacterBody3D"]
collision_layer = 4
collision_mask = 11
floor_constant_speed = true
script = ExtResource("1_merdl")
speed = 1.5
metadata/_custom_type_script = "uid://88pbfyfqnxlk"

[node name="AnimationTree" type="AnimationTree" parent="."]
unique_name_in_owner = true
root_node = NodePath("%arms")
tree_root = SubResource("AnimationNodeStateMachine_yfdjf")
advance_expression_base_node = NodePath("..")
anim_player = NodePath("../Camera3D/arms/AnimationPlayer")
parameters/Punch/blend_position = -0.0028708

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.05, 0)
shape = SubResource("CylinderShape3D_merdl")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.75, 0)
current = true
fov = 90.0

[node name="arms" parent="Camera3D" instance=ExtResource("3_2hcst")]
unique_name_in_owner = true
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, -0.494629, -0.650644)

[node name="Skeleton3D" parent="Camera3D/arms/Armature" index="0"]
bones/0/position = Vector3(1, 0, 0)
bones/1/rotation = Quaternion(0.735802, -0.592273, 0.241166, -0.222815)
bones/2/rotation = Quaternion(0.0030624, 0.0236142, -0.0112135, 0.999654)
bones/3/rotation = Quaternion(-0.00159042, 0.0277205, 0.00308232, 0.99961)
bones/4/rotation = Quaternion(0.000622334, 0.00152072, 0.000717804, 0.999998)
bones/5/position = Vector3(0.15953, 0.447877, -0.0210104)
bones/5/rotation = Quaternion(-0.0234625, -0.000864487, 0.00101648, 0.999724)
bones/5/scale = Vector3(1, 1, 1)
bones/6/rotation = Quaternion(-0.131675, -0.00118174, 0.0090443, 0.991251)
bones/7/position = Vector3(-0.00950443, 0.491846, -0.0293064)
bones/7/rotation = Quaternion(-0.0234625, -0.000864509, 0.00101636, 0.999724)
bones/7/scale = Vector3(1, 1, 1)
bones/8/rotation = Quaternion(-0.129443, 0.00138574, -0.0101911, 0.991533)
bones/9/position = Vector3(-0.158652, 0.499173, -0.0306891)
bones/9/rotation = Quaternion(-0.0234625, -0.000864652, 0.0010163, 0.999724)
bones/10/rotation = Quaternion(-0.128901, -0.000481709, 0.00391386, 0.99165)
bones/11/rotation = Quaternion(0.0542201, -0.011618, 0.192166, 0.979795)
bones/12/rotation = Quaternion(-0.140167, 0.014, -0.173843, 0.974647)
bones/13/rotation = Quaternion(-0.0140731, -0.000286114, -0.0255602, 0.999574)
bones/15/rotation = Quaternion(0.714843, 0.613455, -0.236312, -0.23839)
bones/16/rotation = Quaternion(0.00251911, -0.0285178, 0.0101419, 0.999539)
bones/17/rotation = Quaternion(-0.00169377, -0.0358992, -0.00226873, 0.999352)
bones/18/rotation = Quaternion(0.000961135, -0.00260671, -0.000659553, 0.999996)
bones/19/position = Vector3(-0.15953, 0.447876, -0.0210105)
bones/19/rotation = Quaternion(-0.0234625, 0.000864533, -0.0010165, 0.999724)
bones/20/rotation = Quaternion(-0.131675, 0.00118171, -0.0090443, 0.991251)
bones/21/position = Vector3(0.00950426, 0.491845, -0.0293066)
bones/21/rotation = Quaternion(-0.0234625, 0.000864525, -0.00101638, 0.999724)
bones/22/rotation = Quaternion(-0.129443, -0.00138573, 0.0101911, 0.991533)
bones/23/position = Vector3(0.158652, 0.499173, -0.0306892)
bones/23/rotation = Quaternion(-0.0234625, 0.000864647, -0.0010163, 0.999724)
bones/24/rotation = Quaternion(-0.128901, 0.000481718, -0.00391386, 0.99165)
bones/25/rotation = Quaternion(0.0542201, 0.011618, -0.192166, 0.979795)
bones/26/rotation = Quaternion(-0.140167, -0.014, 0.173843, 0.974647)
bones/27/rotation = Quaternion(-0.0140731, 0.000286122, 0.0255602, 0.999574)

[node name="HUD" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="HUD"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Crosshair" type="TextureRect" parent="HUD/Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -2.5
offset_top = -2.5
offset_right = 2.5
offset_bottom = 2.5
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(4, 4)
pivot_offset = Vector2(2.5, 2.5)
texture = ExtResource("3_otayu")

[node name="HealthText" type="Label" parent="HUD/Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -256.0
offset_top = -184.0
offset_right = -128.0
offset_bottom = -96.0
grow_horizontal = 2
grow_vertical = 2
text = "100"
label_settings = SubResource("LabelSettings_otayu")
horizontal_alignment = 1
vertical_alignment = 2

[node name="BlockText" type="Label" parent="HUD/Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -96.0
offset_top = 28.0
offset_right = 96.0
offset_bottom = 76.0
grow_horizontal = 2
grow_vertical = 0
label_settings = SubResource("LabelSettings_ug0ox")
horizontal_alignment = 1

[node name="PunchText" type="Label" parent="HUD/Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -96.0
offset_top = 84.0
offset_right = 96.0
offset_bottom = 132.0
grow_horizontal = 2
grow_vertical = 0
label_settings = SubResource("LabelSettings_ug0ox")
horizontal_alignment = 1

[node name="CommonPhysicsComponent" parent="." instance=ExtResource("5_quc4t")]

[node name="AudioManagerComponent" parent="." instance=ExtResource("4_ug0ox")]

[node name="HealthComponent" parent="." instance=ExtResource("2_quc4t")]
iframes_amount = 15

[node name="HitboxComponent" parent="." instance=ExtResource("3_ug0ox")]

[node name="CollisionShape3D" type="CollisionShape3D" parent="HitboxComponent"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.05, 0)
shape = SubResource("CylinderShape3D_tdjdb")

[editable path="Camera3D/arms"]
